feat: complete code
- emptyDir
- hostPath

--- a/lab 8/emptyDir/deployment.yml
+++ b/lab 8/emptyDir/deployment.yml
@@ -24,3 +24,5 @@ spec:
             name: "http-server"
         volumeMounts:
           # TODO complete
+        - mountPath: /cache
+          name: chache-volume
